syntax = 'proto3';

package login;

option go_package = "skytala.com/grpc_keycloak;grpc_keycloak";

service LoginService {
    rpc Login (LoginData) returns (LoginResult) {}
}

message LoginData {
    string username = 1;
    string password = 2;
}

message LoginResult {
    bool ok = 1;
    string token = 2;
}