syntax = 'proto3';

package user;

option go_package = "skytala.com/grpc_keycloak;grpc_keycloak";

service UserManagement {
    rpc CreateNewUser (NewUser) returns (User) {}
}

message NewUser {
    string name = 1;
    int32 age = 2;
}

message User {
    string name = 1;
    int32 age = 2;
    int32 id = 3;
}